<resources>

    <string name="app_name">Celulares</string>

    <string name="et_nombre">Nombre</string>
    <string name="et_correo">Correo</string>
    <string name="et_contrasennia">Contraseña</string>
    <string name="btn_inicioSesion">Iniciar Sesion</string>
    <string name="btn_registrar">Registrarse</string>
    <string name="title_activity_celulares">Celulares</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>


</resources>